--- a/finde.ipynb
+++ b/finde.ipynb
@@ -118,7 +118,8 @@
     "    \"unicaja\": \"Unicaja\",\n",
     "    \"cajamar\": \"Cajamar\",\n",
     "    \"openbank\": \"Openbank\"\n",
-    "}"
+    "}\n",
+    "CURRENCY = '€'"
    ]
   },
   {
@@ -328,7 +329,7 @@
     "            trace_main = go.Scatter(\n",
     "                x = dates,\n",
     "                y = balances,\n",
-    "                name = bankName + ': Saldo ' + str(format(balances[-1], ',.2f').replace(\",\", \"X\").replace(\".\", \",\").replace(\"X\", \".\")) + '€',\n",
+    "                name = bankName + ': Saldo ' + str(format(balances[-1], ',.2f').replace(\",\", \"X\").replace(\".\", \",\").replace(\"X\", \".\")) + CURRENCY,\n",
     "                #line = dict(\n",
     "                #    color = 'green'\n",
     "                #),\n",
@@ -447,6 +448,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def buildIncomesExpenses(bankdata):\n",
+    "    data = []\n",
+    "\n",
+    "    for bank in bankdata[CURRENT]:\n",
+    "        dates = bankdata[CURRENT][bank]['date']\n",
+    "        movements = bankdata[CURRENT][bank]['movements']\n",
+    "\n",
+    "        incomes = {}\n",
+    "        expenses = {}\n",
+    "        for date, movement in zip(dates, movements):\n",
+    "            key = str(date.month) + '/' + str(date.year)\n",
+    "\n",
+    "            if float(movement) > 0:\n",
+    "                if key in incomes:\n",
+    "                    incomes[key] += float(movement)\n",
+    "                else:\n",
+    "                    incomes[key] = float(movement)\n",
+    "            else:\n",
+    "                if key in expenses:\n",
+    "                    expenses[key] += float(movement)\n",
+    "                else:\n",
+    "                    expenses[key] = float(movement)\n",
+    "            \n",
+    "        months_x = []\n",
+    "        incomes_y = []\n",
+    "        for key, value in incomes.items():\n",
+    "            months_x.append(dt.datetime.strptime(key, '%m/%Y').date())\n",
+    "            incomes_y.append(value)\n",
+    "        \n",
+    "        trace = go.Bar(\n",
+    "            x = months_x,\n",
+    "            y = incomes_y,\n",
+    "            name = \"Incomes for {}\".format(SUPPORTED_BANKS[bank])\n",
+    "        )\n",
+    "        data.append(trace)\n",
+    "        \n",
+    "        months_x = []\n",
+    "        expenses_y = []\n",
+    "        for key, value in expenses.items():\n",
+    "            months_x.append(dt.datetime.strptime(key, '%m/%Y').date())\n",
+    "            expenses_y.append(value)\n",
+    "        \n",
+    "        trace = go.Bar(\n",
+    "            x = months_x,\n",
+    "            y = expenses_y,\n",
+    "            name = \"Expenses for {}\".format(SUPPORTED_BANKS[bank])\n",
+    "        )\n",
+    "        data.append(trace)\n",
+    "        \n",
+    "    return data"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -462,51 +521,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_super_view(bankdata, minDate, maxDate):\n",
-    "    (data, min_amount, max_amount) = buildTraces(bankdata)\n",
-    "    piggyData = buildPiggy(bankdata)\n",
-    "    for piggyTrace in piggyData:\n",
-    "        newTrace = go.Bar(\n",
-    "            x = piggyTrace.x,\n",
-    "            y = piggyTrace.y,\n",
-    "            name = piggyTrace.name,\n",
-    "            xaxis = 'x2',\n",
-    "            yaxis = 'y2'\n",
-    "        )\n",
-    "        data.append(newTrace)\n",
-    "    layout = go.Layout(\n",
-    "        xaxis=dict(\n",
-    "            domain=[0, 0.9]\n",
-    "        ),\n",
-    "        yaxis=dict(\n",
-    "            range=[min_amount, max_amount]\n",
-    "        ),\n",
-    "        xaxis2=dict(\n",
-    "            domain=[0.9, 1]\n",
-    "        ),\n",
-    "        yaxis2=dict(\n",
-    "            anchor='x2',\n",
-    "            range=[min_amount, max_amount],\n",
-    "            showticklabels=False\n",
-    "        ),\n",
-    "        title = 'Super view ' + minDate.strftime(\"%m/%d/%Y\") + ' - ' + maxDate.strftime(\"%m/%d/%Y\"),\n",
-    "        barmode='stack'\n",
-    "    )\n",
-    "    fig = go.Figure(data=data, layout=layout)\n",
-    "    py.offline.iplot(fig, filename='side-by-side-subplot')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def plot_general(bankdata, minDate, maxDate):\n",
     "    (data, _, _) = buildTraces(bankdata)\n",
     "    layout = go.Layout(title = 'Saldo ' + minDate.strftime(\"%m/%d/%Y\") + ' - ' + maxDate.strftime(\"%m/%d/%Y\"),\n",
     "                  xaxis = dict(title = 'Fecha'),\n",
-    "                  yaxis = dict(title = 'Saldo (€)'),\n",
+    "                  yaxis = dict(title = 'Saldo (' + CURRENCY + ')'),\n",
     "                  showlegend = True\n",
     "    )\n",
     "\n",
@@ -537,15 +556,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def plot_super_view(bankdata, minDate, maxDate):\n",
+    "    (data, min_amount, max_amount) = buildTraces(bankdata)\n",
+    "    piggyData = buildPiggy(bankdata)\n",
+    "    for piggyTrace in piggyData:\n",
+    "        newTrace = go.Bar(\n",
+    "            x = piggyTrace.x,\n",
+    "            y = piggyTrace.y,\n",
+    "            name = piggyTrace.name,\n",
+    "            xaxis = 'x2',\n",
+    "            yaxis = 'y2'\n",
+    "        )\n",
+    "        data.append(newTrace)\n",
+    "    layout = go.Layout(\n",
+    "        xaxis=dict(\n",
+    "            domain=[0, 0.9],\n",
+    "            title = 'Date'\n",
+    "        ),\n",
+    "        yaxis=dict(\n",
+    "            range=[min_amount, max_amount],\n",
+    "            title = 'Amount (' + CURRENCY + ')'\n",
+    "        ),\n",
+    "        xaxis2=dict(\n",
+    "            domain=[0.9, 1]\n",
+    "        ),\n",
+    "        yaxis2=dict(\n",
+    "            anchor='x2',\n",
+    "            range=[min_amount, max_amount],\n",
+    "            showticklabels=False\n",
+    "        ),\n",
+    "        title = 'Super view ' + minDate.strftime(\"%m/%d/%Y\") + ' - ' + maxDate.strftime(\"%m/%d/%Y\"),\n",
+    "        barmode='stack'\n",
+    "    )\n",
+    "    fig = go.Figure(data=data, layout=layout)\n",
+    "    py.offline.iplot(fig, filename='side-by-side-subplot')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def plot_profit(bankdata):\n",
     "    data = buildProfit(bankdata)\n",
     "    layout = go.Layout(\n",
     "        title = 'Monthly profit',\n",
-    "        barmode='group'\n",
+    "        barmode ='group',\n",
+    "        xaxis = dict(title = 'Date'),\n",
+    "        yaxis = dict(title = 'Amount (' + CURRENCY + ')')\n",
     "    )\n",
-    "\n",
     "    fig = go.Figure(data=data, layout=layout)\n",
     "    py.offline.iplot(fig, filename='grouped-bar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_incomesExpenses(bankdata):\n",
+    "    data = buildIncomesExpenses(bankdata)\n",
+    "    layout = go.Layout(\n",
+    "      xaxis = dict(title = 'Date'),\n",
+    "      yaxis = dict(title = 'Amount (' + CURRENCY + ')'),\n",
+    "      barmode = 'relative',\n",
+    "      title = 'Incomes and expenses'\n",
+    "    )\n",
+    "    fig = go.Figure(data=data, layout=layout)\n",
+    "    py.offline.iplot(fig, filename='barmode-relative')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_incomesExpensesProfits(bankdata):\n",
+    "    data = buildIncomesExpenses(bankdata)\n",
+    "    \n",
+    "    dataProfit = buildProfit(bankdata)\n",
+    "    for barProfit in dataProfit:\n",
+    "        trace_profit = go.Scatter(\n",
+    "            x = barProfit.x,\n",
+    "            y = barProfit.y,\n",
+    "            name = barProfit.name,\n",
+    "            mode = 'markers'\n",
+    "        )\n",
+    "        data.append(trace_profit)\n",
+    "    \n",
+    "    layout = go.Layout(\n",
+    "      xaxis = dict(title = 'Date'),\n",
+    "      yaxis = dict(title = 'Amount (' + CURRENCY + ')'),\n",
+    "      barmode = 'relative',\n",
+    "      title = 'Incomes and expenses'\n",
+    "    )\n",
+    "    fig = go.Figure(data=data, layout=layout)\n",
+    "    py.offline.iplot(fig, filename='barmode-relative')"
    ]
   },
   {
@@ -574,8 +683,12 @@
     "(minDate, maxDate) = getIntervalDates(bankdata) # Get dates interval\n",
     "bankdata = fillEmpty(bankdata, maxDate) # Fill missing data with the same value\n",
     "\n",
+    "#plot_general(bankdata, minDate, maxDate)\n",
+    "#plot_piggy(bankdata)\n",
     "plot_super_view(bankdata, minDate, maxDate)\n",
-    "plot_profit(bankdata)"
+    "#plot_profit(bankdata)\n",
+    "#plot_incomesExpenses(bankdata)\n",
+    "plot_incomesExpensesProfits(bankdata)"
    ]
   }
  ],
