total profit and time slider

--- a/finde.ipynb
+++ b/finde.ipynb
@@ -571,7 +571,32 @@
     "    layout = go.Layout(\n",
     "        xaxis=dict(\n",
     "            domain=[0, 0.9],\n",
-    "            title = 'Date'\n",
+    "            title = 'Date',\n",
+    "            rangeselector=dict(\n",
+    "                buttons=list([\n",
+    "                    dict(count=1,\n",
+    "                         label='1 month',\n",
+    "                         step='month',\n",
+    "                         stepmode='backward'),\n",
+    "                    dict(count=3,\n",
+    "                         label='3 months',\n",
+    "                         step='month',\n",
+    "                         stepmode='backward'),\n",
+    "                    dict(count=6,\n",
+    "                         label='6 months',\n",
+    "                         step='month',\n",
+    "                         stepmode='backward'),\n",
+    "                    dict(count=1,\n",
+    "                        label='1 year',\n",
+    "                        step='year',\n",
+    "                        stepmode='backward'),\n",
+    "                    dict(step='all')\n",
+    "                ])\n",
+    "            ),\n",
+    "            rangeslider=dict(\n",
+    "                visible = True\n",
+    "            ),\n",
+    "            type='date'\n",
     "        ),\n",
     "        yaxis=dict(\n",
     "            range=[min_amount, max_amount],\n",
@@ -638,6 +663,8 @@
     "    data = buildIncomesExpenses(bankdata)\n",
     "    \n",
     "    dataProfit = buildProfit(bankdata)\n",
+    "    \n",
+    "    # Profits per bank\n",
     "    for barProfit in dataProfit:\n",
     "        trace_profit = go.Scatter(\n",
     "            x = barProfit.x,\n",
@@ -647,11 +674,68 @@
     "        )\n",
     "        data.append(trace_profit)\n",
     "    \n",
+    "    # Total profits\n",
+    "    totalProfits = {}\n",
+    "    for barProfit in dataProfit:\n",
+    "        for date, value in zip(barProfit.x, barProfit.y):\n",
+    "            key = date.strftime(\"%m/%Y\")\n",
+    "            if key in totalProfits:\n",
+    "                totalProfits[key] += value\n",
+    "            else:\n",
+    "                totalProfits[key] = value\n",
+    "    \n",
+    "    xs = []\n",
+    "    ys = []\n",
+    "    for key, value in totalProfits.items():\n",
+    "        xs.append(dt.datetime.strptime(key, '%m/%Y').date())\n",
+    "        ys.append(value)\n",
+    "    \n",
+    "    trace_profit = go.Scatter(\n",
+    "        x = xs,\n",
+    "        y = ys,\n",
+    "        name = 'Profit',\n",
+    "        mode = 'markers',\n",
+    "        marker = dict(\n",
+    "            size = 10,\n",
+    "            line = dict(\n",
+    "                width = 2,\n",
+    "            )\n",
+    "        )\n",
+    "    )\n",
+    "    data.append(trace_profit)\n",
+    "    \n",
     "    layout = go.Layout(\n",
-    "      xaxis = dict(title = 'Date'),\n",
+    "      xaxis = dict(\n",
+    "          title = 'Date',\n",
+    "          rangeselector=dict(\n",
+    "            buttons=list([\n",
+    "                dict(count=1,\n",
+    "                     label='1 month',\n",
+    "                     step='month',\n",
+    "                     stepmode='backward'),\n",
+    "                dict(count=3,\n",
+    "                     label='3 months',\n",
+    "                     step='month',\n",
+    "                     stepmode='backward'),\n",
+    "                dict(count=6,\n",
+    "                     label='6 months',\n",
+    "                     step='month',\n",
+    "                     stepmode='backward'),\n",
+    "                dict(count=1,\n",
+    "                    label='1 year',\n",
+    "                    step='year',\n",
+    "                    stepmode='backward'),\n",
+    "                dict(step='all')\n",
+    "            ])\n",
+    "        ),\n",
+    "        rangeslider=dict(\n",
+    "            visible = True\n",
+    "        ),\n",
+    "        type='date'\n",
+    "      ),\n",
     "      yaxis = dict(title = 'Amount (' + CURRENCY + ')'),\n",
     "      barmode = 'relative',\n",
-    "      title = 'Incomes and expenses'\n",
+    "      title = 'Incomes, expenses and profit'\n",
     "    )\n",
     "    fig = go.Figure(data=data, layout=layout)\n",
     "    py.offline.iplot(fig, filename='barmode-relative')"
