Working on sum traces (commented)

--- a/finde.ipynb
+++ b/finde.ipynb
@@ -382,8 +382,58 @@
     "            # Extra\n",
     "            if balances.max() > max_amount:\n",
     "                max_amount = balances.max()\n",
-    "        \n",
+    "    \n",
+    "    # data.append(get_trace_sum_balances(bankdata))\n",
+    "    \n",
     "    return (data, min_amount, max_amount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "def get_trace_sum_balances(bankdata):\n",
+    "    sum_balances = []\n",
+    "    for bank in bankdata[CURRENT]:\n",
+    "        dates = bankdata[CURRENT][bank]['date']\n",
+    "        balances = bankdata[CURRENT][bank]['balance']\n",
+    "        sum_account = {}\n",
+    "        for date, balance in zip(dates, balances):\n",
+    "            key = str(date.day) + '/' +str(date.month) + '/' + str(date.year)\n",
+    "\n",
+    "            if key in sum_balances:\n",
+    "                if (sum_account[key] < balance):\n",
+    "                    sum_account[key] = balance\n",
+    "            else:\n",
+    "                sum_account[key] = balance\n",
+    "                \n",
+    "        sum_balances.append(sum_account)\n",
+    "    \n",
+    "    total = sum_balances.pop(0)\n",
+    "    for j in sum_balances:\n",
+    "        for key, value in j.items():\n",
+    "            if key in total:\n",
+    "                total[key] += value\n",
+    "            else:\n",
+    "                total[key] = value\n",
+    "\n",
+    "    print(total)\n",
+    "    \n",
+    "    dates = [dt.datetime.strptime(x, '%d/%m/%Y').date() for x in total.keys()]\n",
+    "    balances = total.values()\n",
+    "    \n",
+    "    trace = go.Scatter(\n",
+    "        x = dates,\n",
+    "        y = balances,\n",
+    "        name = \"All Accounts\",\n",
+    "        mode = 'markers'\n",
+    "    )\n",
+    "        \n",
+    "    return trace\n",
+    "    '''"
    ]
   },
   {
