--- a/finde.ipynb
+++ b/finde.ipynb
@@ -383,7 +383,7 @@
     "            if balances.max() > max_amount:\n",
     "                max_amount = balances.max()\n",
     "    \n",
-    "    # data.append(get_trace_sum_balances(bankdata))\n",
+    "    data.append(get_trace_sum_balances(bankdata))\n",
     "    \n",
     "    return (data, min_amount, max_amount)"
    ]
@@ -394,7 +394,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
+    "def daterange(d1, d2):\n",
+    "    return (d1 + dt.timedelta(days=i) for i in range((d2 - d1).days + 1))\n",
+    "\n",
     "def get_trace_sum_balances(bankdata):\n",
     "    sum_balances = []\n",
     "    for bank in bankdata[CURRENT]:\n",
@@ -402,38 +404,42 @@
     "        balances = bankdata[CURRENT][bank]['balance']\n",
     "        sum_account = {}\n",
     "        for date, balance in zip(dates, balances):\n",
-    "            key = str(date.day) + '/' +str(date.month) + '/' + str(date.year)\n",
-    "\n",
-    "            if key in sum_balances:\n",
-    "                if (sum_account[key] < balance):\n",
-    "                    sum_account[key] = balance\n",
-    "            else:\n",
-    "                sum_account[key] = balance\n",
+    "            sum_account[date] = balance\n",
     "                \n",
     "        sum_balances.append(sum_account)\n",
     "    \n",
-    "    total = sum_balances.pop(0)\n",
-    "    for j in sum_balances:\n",
-    "        for key, value in j.items():\n",
-    "            if key in total:\n",
-    "                total[key] += value\n",
+    "    total = {}\n",
+    "    (ini, fin) = getIntervalDates(bankdata)\n",
+    "    last = 0\n",
+    "    for b in sum_balances:\n",
+    "        for d in daterange(ini, fin):\n",
+    "            if d in b:\n",
+    "                last = b[d]\n",
+    "                if d in total:\n",
+    "                    total[d] += b[d]\n",
+    "                else:\n",
+    "                    total[d] = b[d]\n",
     "            else:\n",
-    "                total[key] = value\n",
-    "\n",
-    "    print(total)\n",
+    "                if d in total:\n",
+    "                    total[d] += last\n",
+    "                else:\n",
+    "                    total[d] = last\n",
+    "                \n",
     "    \n",
-    "    dates = [dt.datetime.strptime(x, '%d/%m/%Y').date() for x in total.keys()]\n",
+    "    dates = total.keys()\n",
     "    balances = total.values()\n",
+    "    \n",
+    "    (dates, balances) = zip(*sorted(zip(dates, balances)))\n",
     "    \n",
     "    trace = go.Scatter(\n",
     "        x = dates,\n",
     "        y = balances,\n",
     "        name = \"All Accounts\",\n",
-    "        mode = 'markers'\n",
+    "        mode = 'lines',\n",
+    "        line = dict ( width = 4 )\n",
     "    )\n",
     "        \n",
-    "    return trace\n",
-    "    '''"
+    "    return trace"
    ]
   },
   {
@@ -841,14 +847,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
