max_amount and current for all accounts added

--- a/finde.ipynb
+++ b/finde.ipynb
@@ -383,7 +383,8 @@
     "            if balances.max() > max_amount:\n",
     "                max_amount = balances.max()\n",
     "    \n",
-    "    data.append(get_trace_sum_balances(bankdata))\n",
+    "    max_amount, sum_trace = get_trace_sum_balances(bankdata)\n",
+    "    data.append(sum_trace)\n",
     "    \n",
     "    return (data, min_amount, max_amount)"
    ]
@@ -411,12 +412,15 @@
     "    total = {}\n",
     "    (ini, fin) = getIntervalDates(bankdata)\n",
     "    last = 0\n",
+    "    max_amount = 0\n",
     "    for b in sum_balances:\n",
     "        for d in daterange(ini, fin):\n",
     "            if d in b:\n",
-    "                last = b[d]\n",
+    "                last = b[d]                    \n",
     "                if d in total:\n",
     "                    total[d] += b[d]\n",
+    "                    if total[d] > max_amount:\n",
+    "                        max_amount = total[d]\n",
     "                else:\n",
     "                    total[d] = b[d]\n",
     "            else:\n",
@@ -434,12 +438,12 @@
     "    trace = go.Scatter(\n",
     "        x = dates,\n",
     "        y = balances,\n",
-    "        name = \"All Accounts\",\n",
+    "        name = \"All Accounts - Amount: \" + format(balances[-1], ',.2f').replace(\",\", \"X\").replace(\".\", \",\").replace(\"X\", \".\") + CURRENCY,\n",
     "        mode = 'lines',\n",
     "        line = dict ( width = 4 )\n",
     "    )\n",
-    "        \n",
-    "    return trace"
+    "\n",
+    "    return (max_amount, trace)"
    ]
   },
   {
