--- a/finde.ipynb
+++ b/finde.ipynb
@@ -309,6 +309,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Extra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def daterange(d1, d2):\n",
+    "    return (d1 + dt.timedelta(days=i) for i in range((d2 - d1).days + 1))\n",
+    "\n",
+    "def get_trace_sum_balances(bankdata):\n",
+    "    sum_balances = []\n",
+    "    for bank in bankdata[CURRENT]:\n",
+    "        dates = bankdata[CURRENT][bank]['date']\n",
+    "        balances = bankdata[CURRENT][bank]['balance']\n",
+    "        sum_account = {}\n",
+    "        for date, balance in zip(dates, balances):\n",
+    "            sum_account[date] = balance\n",
+    "                \n",
+    "        sum_balances.append(sum_account)\n",
+    "    \n",
+    "    total = {}\n",
+    "    (ini, fin) = getIntervalDates(bankdata)\n",
+    "    last = 0\n",
+    "    max_amount = 0\n",
+    "    for b in sum_balances:\n",
+    "        for d in daterange(ini, fin):\n",
+    "            if d in b:\n",
+    "                last = b[d]                    \n",
+    "                if d in total:\n",
+    "                    total[d] += b[d]\n",
+    "                    if total[d] > max_amount:\n",
+    "                        max_amount = total[d]\n",
+    "                else:\n",
+    "                    total[d] = b[d]\n",
+    "            else:\n",
+    "                if d in total:\n",
+    "                    total[d] += last\n",
+    "                else:\n",
+    "                    total[d] = last\n",
+    "                \n",
+    "    \n",
+    "    dates = total.keys()\n",
+    "    balances = total.values()\n",
+    "    \n",
+    "    (dates, balances) = zip(*sorted(zip(dates, balances)))\n",
+    "    \n",
+    "    trace = go.Scatter(\n",
+    "        x = dates,\n",
+    "        y = balances,\n",
+    "        name = \"All Accounts - Amount: \" + format(balances[-1], ',.2f').replace(\",\", \"X\").replace(\".\", \",\").replace(\"X\", \".\") + CURRENCY,\n",
+    "        mode = 'lines',\n",
+    "        line = dict ( width = 4 )\n",
+    "    )\n",
+    "\n",
+    "    return (max_amount, trace)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Build"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -387,63 +458,6 @@
     "    data.append(sum_trace)\n",
     "    \n",
     "    return (data, min_amount, max_amount)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def daterange(d1, d2):\n",
-    "    return (d1 + dt.timedelta(days=i) for i in range((d2 - d1).days + 1))\n",
-    "\n",
-    "def get_trace_sum_balances(bankdata):\n",
-    "    sum_balances = []\n",
-    "    for bank in bankdata[CURRENT]:\n",
-    "        dates = bankdata[CURRENT][bank]['date']\n",
-    "        balances = bankdata[CURRENT][bank]['balance']\n",
-    "        sum_account = {}\n",
-    "        for date, balance in zip(dates, balances):\n",
-    "            sum_account[date] = balance\n",
-    "                \n",
-    "        sum_balances.append(sum_account)\n",
-    "    \n",
-    "    total = {}\n",
-    "    (ini, fin) = getIntervalDates(bankdata)\n",
-    "    last = 0\n",
-    "    max_amount = 0\n",
-    "    for b in sum_balances:\n",
-    "        for d in daterange(ini, fin):\n",
-    "            if d in b:\n",
-    "                last = b[d]                    \n",
-    "                if d in total:\n",
-    "                    total[d] += b[d]\n",
-    "                    if total[d] > max_amount:\n",
-    "                        max_amount = total[d]\n",
-    "                else:\n",
-    "                    total[d] = b[d]\n",
-    "            else:\n",
-    "                if d in total:\n",
-    "                    total[d] += last\n",
-    "                else:\n",
-    "                    total[d] = last\n",
-    "                \n",
-    "    \n",
-    "    dates = total.keys()\n",
-    "    balances = total.values()\n",
-    "    \n",
-    "    (dates, balances) = zip(*sorted(zip(dates, balances)))\n",
-    "    \n",
-    "    trace = go.Scatter(\n",
-    "        x = dates,\n",
-    "        y = balances,\n",
-    "        name = \"All Accounts - Amount: \" + format(balances[-1], ',.2f').replace(\",\", \"X\").replace(\".\", \",\").replace(\"X\", \".\") + CURRENCY,\n",
-    "        mode = 'lines',\n",
-    "        line = dict ( width = 4 )\n",
-    "    )\n",
-    "\n",
-    "    return (max_amount, trace)"
    ]
   },
   {
@@ -851,14 +865,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
