Fix read openbank with and without comma

--- a/finde.ipynb
+++ b/finde.ipynb
@@ -49,7 +49,10 @@
    },
    "outputs": [],
    "source": [
-    "!pip install plotly"
+    "!pip install plotly\n",
+    "!pip install numpy\n",
+    "!pip install pandas\n",
+    "!pip install xlrd"
    ]
   },
   {
@@ -183,12 +186,25 @@
     "    if bank == 'openbank':\n",
     "        df = pd.read_html(file)\n",
     "        df = df[0].dropna(axis=0, thresh=4)\n",
+    "        \n",
     "        date_str = df.iloc[1:,1]\n",
     "        date = [dt.datetime.strptime(x, '%d/%m/%Y').date() for x in date_str]\n",
+    "        \n",
     "        balance_str = df.iloc[1:,9]\n",
-    "        balance = [float((x[:-2] + ',' + x[-2:]).replace('.','').replace(',','.')) for x in balance_str]\n",
+    "        balance = []\n",
+    "        for x in balance_str:\n",
+    "            if ',' in x:\n",
+    "                balance.append(float(x.replace('.','').replace(',','.')))\n",
+    "            else:\n",
+    "                balance.append(float((x[:-2] + ',' + x[-2:]).replace('.','').replace(',','.')))\n",
+    "        \n",
     "        movements_str = df.iloc[1:,7]\n",
-    "        movements = [float((x[:-2] + ',' + x[-2:]).replace('.','').replace(',','.')) for x in movements_str]\n",
+    "        movements = []\n",
+    "        for x in movements_str:\n",
+    "            if ',' in x:\n",
+    "                movements.append(float(x.replace('.','').replace(',','.')))\n",
+    "            else:\n",
+    "                movements.append(float((x[:-2] + ',' + x[-2:]).replace('.','').replace(',','.')))\n",
     "\n",
     "    return (balance, date, movements)"
    ]
@@ -610,9 +626,9 @@
    "source": [
     "def plot_general(bankdata, minDate, maxDate):\n",
     "    (data, _, _) = buildTraces(bankdata)\n",
-    "    layout = go.Layout(title = 'Saldo ' + minDate.strftime(\"%m/%d/%Y\") + ' - ' + maxDate.strftime(\"%m/%d/%Y\"),\n",
-    "                  xaxis = dict(title = 'Fecha'),\n",
-    "                  yaxis = dict(title = 'Saldo (' + CURRENCY + ')'),\n",
+    "    layout = go.Layout(title = 'Amount ' + minDate.strftime(\"%m/%d/%Y\") + ' - ' + maxDate.strftime(\"%m/%d/%Y\"),\n",
+    "                  xaxis = dict(title = 'Date'),\n",
+    "                  yaxis = dict(title = 'Amount (' + CURRENCY + ')'),\n",
     "                  showlegend = True\n",
     "    )\n",
     "\n",
@@ -854,13 +870,20 @@
     "(minDate, maxDate) = getIntervalDates(bankdata) # Get dates interval\n",
     "bankdata = fillEmpty(bankdata, maxDate) # Fill missing data with the same value\n",
     "\n",
-    "#plot_general(bankdata, minDate, maxDate)\n",
+    "plot_general(bankdata, minDate, maxDate)\n",
     "#plot_piggy(bankdata)\n",
     "plot_super_view(bankdata, minDate, maxDate)\n",
     "#plot_profit(bankdata)\n",
     "#plot_incomesExpenses(bankdata)\n",
     "plot_incomesExpensesProfits(bankdata)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -871,7 +894,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -885,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
