Fix max amount wrong calculation

--- a/finde.ipynb
+++ b/finde.ipynb
@@ -357,7 +357,6 @@
     "    \n",
     "    total = {}\n",
     "    (ini, fin) = getIntervalDates(bankdata)\n",
-    "    max_amount = 0\n",
     "    for b in sum_balances:\n",
     "        last = 0\n",
     "        for d in daterange(ini, fin):\n",
@@ -365,8 +364,6 @@
     "                last = b[d]\n",
     "                if d in total:\n",
     "                    total[d] += b[d]\n",
-    "                    if total[d] > max_amount:\n",
-    "                        max_amount = total[d]\n",
     "                else:\n",
     "                    total[d] = b[d]\n",
     "            else:\n",
@@ -389,7 +386,7 @@
     "        line = dict ( width = 4 )\n",
     "    )\n",
     "\n",
-    "    return (max_amount, trace)"
+    "    return (max(balances), trace)"
    ]
   },
   {
