--- a/finde.ipynb
+++ b/finde.ipynb
@@ -17,7 +17,8 @@
     "## Availables banks\n",
     "- Cajamar\n",
     "- Openbank\n",
-    "- Unicaja"
+    "- Unicaja\n",
+    "- BBVA"
    ]
   },
   {
@@ -52,7 +53,8 @@
     "!pip install plotly\n",
     "!pip install numpy\n",
     "!pip install pandas\n",
-    "!pip install xlrd"
+    "!pip install xlrd\n",
+    "!pip install openpyxl"
    ]
   },
   {
@@ -120,7 +122,8 @@
     "SUPPORTED_BANKS = {\n",
     "    \"unicaja\": \"Unicaja\",\n",
     "    \"cajamar\": \"Cajamar\",\n",
-    "    \"openbank\": \"Openbank\"\n",
+    "    \"openbank\": \"Openbank\",\n",
+    "    \"bbva\": \"BBVA\"\n",
     "}\n",
     "CURRENCY = '€'"
    ]
@@ -132,7 +135,7 @@
     "id": "MXwOqGAitt6A"
    },
    "source": [
-    "### Process CSV and XLS"
+    "### Process CSV, XLS and XLSX"
    ]
   },
   {
@@ -184,6 +187,7 @@
     "        date = [xlrd.xldate_as_datetime(date_int[i], book.datemode).date() for i in range(0, len(date_int))]\n",
     "    \n",
     "    if bank == 'openbank':\n",
+    "        # TODO Improve and read like sheets\n",
     "        df = pd.read_html(file)\n",
     "        df = df[0].dropna(axis=0, thresh=4)\n",
     "        \n",
@@ -205,6 +209,30 @@
     "                movements.append(float(x.replace('.','').replace(',','.')))\n",
     "            else:\n",
     "                movements.append(float((x[:-2] + ',' + x[-2:]).replace('.','').replace(',','.')))\n",
+    "\n",
+    "    return (balance, date, movements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def processXLSX(file, bank):   \n",
+    "    balance = []\n",
+    "    date = []\n",
+    "    movements = []\n",
+    "    \n",
+    "    if bank == 'bbva':\n",
+    "        df = pd.read_excel(file)\n",
+    "\n",
+    "        datetime = df.iloc[4:,1]\n",
+    "        date = [x.date() for x in datetime]\n",
+    "\n",
+    "        balance = df.iloc[4:,7]\n",
+    "\n",
+    "        movements = df.iloc[4:,5]\n",
     "\n",
     "    return (balance, date, movements)"
    ]
@@ -255,6 +283,12 @@
     "                if extension == \".xls\":\n",
     "                    #print(\"{} - {}\".format(bankname, datafile))\n",
     "                    (balance, date, movements) = processXLS(datafile, bankname)\n",
+    "                    bankdata[accountType][bankname][\"balance\"].extend(balance)\n",
+    "                    bankdata[accountType][bankname][\"date\"].extend(date)\n",
+    "                    bankdata[accountType][bankname][\"movements\"].extend(movements)\n",
+    "                if extension == '.xlsx':\n",
+    "                    #print(\"{} - {}\".format(bankname, datafile))\n",
+    "                    (balance, date, movements) = processXLSX(datafile, bankname)\n",
     "                    bankdata[accountType][bankname][\"balance\"].extend(balance)\n",
     "                    bankdata[accountType][bankname][\"date\"].extend(date)\n",
     "                    bankdata[accountType][bankname][\"movements\"].extend(movements)\n",
@@ -342,18 +376,19 @@
     "\n",
     "def get_trace_sum_balances(bankdata):\n",
     "    sum_balances = []\n",
-    "    for bank in bankdata[CURRENT]:\n",
-    "        movements = bankdata[CURRENT][bank]['movements']\n",
-    "        dates = bankdata[CURRENT][bank]['date']\n",
-    "        balances = bankdata[CURRENT][bank]['balance']\n",
-    "        sum_account = {}\n",
-    "        for date, movement, balance in zip(dates, movements, balances):\n",
-    "            if (date not in sum_account):\n",
-    "                sum_account[date] = balance\n",
-    "            elif((balance < sum_account[date] and movement < 0) or (balance > sum_account[date] and movement > 0)):\n",
-    "                sum_account[date] = balance\n",
-    "                \n",
-    "        sum_balances.append(sum_account)\n",
+    "    for accountType in ACCOUNTTYPES: # Account type\n",
+    "        for bank in bankdata[accountType]: # Bank name\n",
+    "            movements = bankdata[accountType][bank]['movements']\n",
+    "            dates = bankdata[accountType][bank]['date']\n",
+    "            balances = bankdata[accountType][bank]['balance']\n",
+    "            sum_account = {}\n",
+    "            for date, movement, balance in zip(dates, movements, balances):\n",
+    "                if (date not in sum_account):\n",
+    "                    sum_account[date] = balance\n",
+    "                elif((balance < sum_account[date] and movement < 0) or (balance > sum_account[date] and movement > 0)):\n",
+    "                    sum_account[date] = balance\n",
+    "\n",
+    "            sum_balances.append(sum_account)\n",
     "    \n",
     "    total = {}\n",
     "    (ini, fin) = getIntervalDates(bankdata)\n",
@@ -867,7 +902,7 @@
     "(minDate, maxDate) = getIntervalDates(bankdata) # Get dates interval\n",
     "bankdata = fillEmpty(bankdata, maxDate) # Fill missing data with the same value\n",
     "\n",
-    "plot_general(bankdata, minDate, maxDate)\n",
+    "#plot_general(bankdata, minDate, maxDate)\n",
     "#plot_piggy(bankdata)\n",
     "plot_super_view(bankdata, minDate, maxDate)\n",
     "#plot_profit(bankdata)\n",
@@ -891,7 +926,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -906,6 +941,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "afcd2cba47a89e827aa7f70336515a79553125b14a6a9805bc8b341e7a5cf456"
+   }
   }
  },
  "nbformat": 4,
